# ElmaWebAPI

./: .coveragerc  .gitignore  LICENSE  Pipfile  README.md  elma.py  elma_test.py  env.txt  legacy.py  process_progress.txt  pyproject.toml  setup.cfg  structure.py  tests.py
docs/: README.md  library.md  parser.md  services.md
elma/: __init__.py  entity_type_uids.py  library.py  main.py  provider.py  server.py  settings.py  structure.py
elma/services/: __init__.py  auth.py  base.py  decorators.py  entity.py  error.py  feed.py  files.py  task.py  workflow.py
src/elmawebapi/: __init__.py  api.py  library.py  structure.py
src/elmawebapi/services/: __init__.py  auth.py  base.py  decorators.py  entity.py  error.py  feed.py  files.py  task.py  workflow.py
tests/: test_library.py  test_parser.py  test_services.py
